--- a/experience.html
+++ b/experience.html
@@ -44,11 +44,15 @@
 			
 			<!-- Expedia Group -->
 			<div class="point">
-				<h2>Expedia Group</h2>
-				<span><img src="images/eg.jpg" alt="Expedia Group Logo" /></span>
-				<p>During my time with Expedia, I had the pleasure of working on an IOS Development team based in Gurgaon, India. Together, we built various components utilizing the latest technologies such as SwiftUI and UIKit. During this internship, I had the opportunity to work with Apollo graphQL to build SDUI, which involved creating reusable components with unit tests and uitests.
-
-					Additionally, I was fortunate enough to participate in the EG Global hackathon, where my team won the "Share the Love" category. We achieved this by leveraging Apple's innovative SharePlay API, which allowed us to create a seamless and engaging experience for users. Overall, my experience at Expedia taught me valuable skills and provided me with the opportunity to work alongside talented individuals on meaningful projects.</p>
+			    <h2>Expedia Group</h2>
+			    <span><img src="images/eg.jpg" alt="Expedia Group Logo" /></span>
+			    <p>During my time at Expedia, I gained valuable experience across various roles, starting as a Software Engineer Intern and progressing to Software Engineer II. 
+			
+			        As a <strong>Software Engineer Intern (May 2022 - July 2022)</strong>, I collaborated with an iOS Development team based in Gurgaon, India, where I helped build scalable and reusable components using SwiftUI and UIKit. I integrated Apollo GraphQL for SDUI, ensuring high code quality with comprehensive unit and UI testing, which improved maintainability. I also contributed to the <strong>EG Global Hackathon</strong>, where my team won the "Share the Love" category by developing innovative features using Apple's SharePlay API, demonstrating both creativity and technical skill. Additionally, I developed a dynamic carousel component for the activities page, enhancing user engagement by showcasing related travel activities.
+			
+			        In my role as <strong>Software Engineer I (Aug 2023 - Aug 2024)</strong>, I worked on full-stack solutions using technologies such as GraphQL, Node.js, TypeScript, Java, and React. I contributed to a robust and scalable property onboarding system that enhanced both user experience and operational efficiency. I also led the implementation of a rate automation system, optimizing rate management, partner enrollment, and driving increased bookings and revenue. In addition, I spearheaded security enhancements by upgrading Java and Node.js versions and patching vulnerabilities, ensuring system security and compliance with the latest standards. I also mentored an intern, guiding them through the successful migration of a legacy onboarding page to a new platform.
+			
+			        As a <strong>Software Engineer II (Aug 2024 - Present)</strong>, I enhanced unified navigation and state management, making cross-platform navigation more robust and consistent, leading to an improved user experience. I also led the initiative to address EU accessibility compliance issues within tight deadlines, ensuring regulatory adherence. To improve maintainability and debugging, I enhanced logging efficiency in our Java Spring application by implementing Aspect-Oriented Programming (AOP). Additionally, I leveraged the Shadow DOM to streamline the migration of legacy pages, improving both system performance and maintainability.</p>
 			</div>
 		</div>
 	</body>
